Fix z-index for nav

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ a {
   margin-top: 10px;
   width: 95%;
   border-bottom: #000 2px solid;
-  z-index: 0;
+  z-index: 1;
 }
 .nav-option {
   text-align: center;
@@ -67,7 +67,7 @@ a {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 #content-area {
@@ -100,7 +100,8 @@ a {
 #side-bar {
   flex: 1 1 20%;
 
-  position: absolute;
+  z-index: 0;
+  position: fixed;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
